Closed Bug 1726810 Opened 4 years ago Closed 4 years ago

Pref off exiting of fullscreen on escape key event on macOS

Categories

(Core :: Widget: Cocoa, defect, P1)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
93 Branch
Tracking Status
firefox91 --- unaffected
firefox92 + verified
firefox93 --- verified

People

(Reporter: spohl, Assigned: spohl)

References

Details

Attachments

(1 file)

Pref off exiting of fullscreen on escape key events until we have had time to tweak our handling of edge cases.

Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a533746e2435 Pref off exiting of fullscreen on escape key events on macOS for now. r=mac-reviewers,bradwerth
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

[Tracking Requested - why for this release]:

Bug 1688584 landed in 92 and we will want to have this feature pref'd off until we've been able to confirm that this feature works as expected.

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(spohl.mozilla.bugs)

Comment on attachment 9237252 [details]
Bug 1726810: Pref off exiting of fullscreen on escape key events on macOS for now. r=#mac-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: Users could accidentally exit fullscreen when pressing the escape key when they shouldn't. We will want to evaluate the reported issues before turning the feature back on by default.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This restores the behavior prior to bug 1688584 and is therefore less risky than letting bug 1688584 ride to release turned on by default.
  • String changes made/needed: none
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #9237252 - Flags: approval-mozilla-beta?
See Also: → 1725884

Verified fixed with Firefox 93.0a1 (20210824094724) on macOS 11 ARM and 10.15. Fullscreen is no longer closed when pressing ESC key while browser.fullscreen.exit_on_escape pref is set on false. This was tested with native fullscreen enabled and disabled.

Comment on attachment 9237252 [details]
Bug 1726810: Pref off exiting of fullscreen on escape key events on macOS for now. r=#mac-reviewers

Approved for 92.0b8.

Attachment #9237252 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified fixed with92.0b8 (20210824191834) on macOS 11.5 and macOS 10.15. Fullscreen is no longer closed while browser.fullscreen.exit_on_escape pref is set on false.

Status: RESOLVED → VERIFIED

Thank you, thank you, thank you. This was driving me crazy. b8 fixed it.

Thanks, this was also driving me crazy.

Thanks you, this was absolutely a dealbreaker for anyone with vimfx

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: