Bug 1726810: Pref off exiting of fullscreen on escape key events on macOS for now. r=mac-reviewers,bradwerth a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D123237